--- a/src/components/_RsvpForm.scss
+++ b/src/components/_RsvpForm.scss
@@ -19,6 +19,11 @@
     padding: 15px 20px;
     border: 1px solid;
     border-radius: 10px;
+
+    @include mobile {
+        width: 300px;
+        padding: 10px 15px;
+    }
 }
 
 .rsvp-form {
@@ -34,6 +39,10 @@
         h4 {
             font-size: 20px;
             color: rgb(255, 166, 0);
+
+            @include mobile {
+                font-size: 16px;
+            }
         }
     }
 
@@ -45,6 +54,11 @@
 
         &:hover {
             transform: rotate(90deg);
+        }
+
+        @include mobile {
+            width: 20px;
+            height: 20px;
         }
     }
 
@@ -65,6 +79,10 @@
                 align-items: center;
                 justify-content: center;
                 gap: 3px;
+
+                @include mobile {
+                    font-size: 14px;
+                }
             }
         }
     }
@@ -92,6 +110,10 @@
                 align-items: center;
                 justify-content: center;
                 gap: 3px;
+
+                @include mobile {
+                    font-size: 14px;
+                }
             }
         }
     }
@@ -112,12 +134,15 @@
             width: 80px;
             position: relative;
 
+            @include mobile {
+                font-size: 14px;
+            }
+
             &::after {
                 content: "";
                 display: block;
                 position: absolute;
-                top: 1px;
-                right: 5px;
+                top: -5px;
                 width: 3px;
                 height: 3px;
                 background: red;
@@ -126,6 +151,8 @@
         }
 
         input {
+            box-sizing: border-box;
+            padding-left: 10px;
             width: 100%;
             height: 30px;
             border: none;
@@ -143,12 +170,15 @@
             width: 80px;
             position: relative;
 
+            @include mobile {
+                font-size: 14px;
+            }
+
             &::after {
                 content: "";
                 display: block;
                 position: absolute;
-                top: 1px;
-                right: 5px;
+                top: -5px;
                 width: 3px;
                 height: 3px;
                 background: red;
@@ -157,6 +187,8 @@
         }
 
         input {
+            box-sizing: border-box;
+            padding-left: 10px;
             width: 100%;
             height: 30px;
             border: none;
@@ -174,12 +206,15 @@
             width: 80px;
             position: relative;
 
+            @include mobile {
+                font-size: 14px;
+            }
+
             &::after {
                 content: "";
                 display: block;
                 position: absolute;
-                top: 1px;
-                right: 5px;
+                top: -5px;
                 width: 3px;
                 height: 3px;
                 background: red;
@@ -188,6 +223,8 @@
         }
 
         input {
+            box-sizing: border-box;
+            padding-left: 10px;
             width: 100%;
             height: 30px;
             border: none;
@@ -202,6 +239,12 @@
             display: flex;
             align-items: center;
             gap: 5px;
+        }
+
+        label {
+            @include mobile {
+                font-size: 14px;
+            }
         }
 
         &-content {
@@ -237,5 +280,10 @@
     &__check-icon {
         width: 25px;
         height: 25px;
+
+        @include mobile {
+            width: 15px;
+            height: 15px;
+        }
     }
 }
